# acapy-resolver-github

./: README.md  pyproject.toml  setup.py
acapy_resolver_github/: __init__.py  resolver.py
docker/: Dockerfile  README.md  default.yml
tests/: test_resolver.py
