[tool.poetry]
name = "acapy_resolver_github"
version = "0.1.0"
description = "ACA-Py DID Resolver for Github DID Method"
authors = ["Daniel Bluhm <dbluhm@pm.me>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.6.9"
aiohttp = "^3.6.2"
aries-cloudagent = {git = "https://github.com/hyperledger/aries-cloudagent-python", rev = "main"}

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.0"
black = "^20.8b1"
flake8 = "^3.9.0"
pytest = "^6.2.3"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
